The final alignment
